--- a/pom.xml
+++ b/pom.xml
@@ -2,23 +2,30 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
     <version>9.0.0.0-SNAPSHOT</version>
   </parent>
+
   <groupId>pentaho</groupId>
   <artifactId>pentaho-platform-ce-parent</artifactId>
   <version>9.0.0.0-SNAPSHOT</version>
+
   <packaging>pom</packaging>
+
   <name>Pentaho BI Platform Community Edition</name>
   <description>Parent pom for pentaho-platform projects</description>
+
   <url>http://www.pentaho.com</url>
+
   <scm>
     <connection>scm:git:git@github.com:pentaho/pentaho-platform.git</connection>
     <developerConnection>scm:git:git@github.com:pentaho/pentaho-platform.git</developerConnection>
     <url>https://github.com/pentaho/pentaho-platform</url>
   </scm>
+
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -225,6 +232,23 @@
     <hsqldb.version>2.3.2</hsqldb.version>
     <websocket-api.version>1.0</websocket-api.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.pentaho.csrf</groupId>
+        <artifactId>csrf-client-api</artifactId>
+        <version>${project.version}</version>
+        <exclusions>
+          <exclusion>
+            <artifactId>*</artifactId>
+            <groupId>*</groupId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <build>
     <pluginManagement>
       <plugins>
@@ -269,6 +293,7 @@
       </plugins>
     </pluginManagement>
   </build>
+
   <profiles>
     <profile>
       <id>platform-api</id>
@@ -367,7 +392,6 @@
       </reporting>
     </profile>
   </profiles>
-
 
   <repositories>
     <repository>
